deploy/django-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-pod-yema
  labels:
    app: yema
    type: backend
spec:
  containers:
    - name: django-container-yema
      image: alejandro180192/yema-back:latest
      readinessProbe:
        httpGet:
          path: /
          port: 9000
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 15
