deploy/angular-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service-yema
  labels:
    app: yema
spec:
  type: NodePort
  ports: 
    - port: 7070
      targetPort: 80
      protocol: TCP
  selector: 
    app: yema
    type: frontend
