deploy/django-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service-yema
  labels:
    app: yema
spec:
  type: NodePort
  ports: 
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector: 
    app: yema
    type: backend
