deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service-yema
  labels:
    app: yema
spec:
  type: NodePort
  ports: 
    - port: 7070
      targetPort: 80
      protocol: TCP
  selector: 
    app: yema
    type: frontend

---

apiVersion: v1
kind: Service
metadata:
  name: django-api-service-yema
  labels:
    app: yema
spec:
  type: NodePort
  ports: 
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: api
    - port: 80
      targetPort: 80
      name: static 
  selector: 
    app: yema
    type: backend
